Closed Bug 903562 Opened 12 years ago Closed 12 years ago

[B2G][Helix][Camera]The front camera preview image rotated 180 degree.

Categories

(Firefox OS Graveyard :: General, defect, P1)

ARM
Gonk (Firefox OS)
defect

Tracking

(blocking-b2g:hd+, firefox24 wontfix, firefox25 wontfix, firefox26 fixed, b2g18 wontfix, b2g18-v1.0.0 wontfix, b2g18-v1.0.1 wontfix, b2g-v1.1hd fixed)

VERIFIED FIXED
blocking-b2g hd+
Tracking Status
firefox24 --- wontfix
firefox25 --- wontfix
firefox26 --- fixed
b2g18 --- wontfix
b2g18-v1.0.0 --- wontfix
b2g18-v1.0.1 --- wontfix
b2g-v1.1hd --- fixed

People

(Reporter: diego, Assigned: diego)

Details

Attachments

(2 files, 2 obsolete files)

+++ This bug was initially created as a clone of Bug #894374 +++ User Agent: Mozilla/4.0 (compatible; MSIE 8.0; Windows NT 6.1; Trident/4.0; SLCC2; .NET CLR 2.0.50727; .NET CLR 3.5.30729; .NET CLR 3.0.30729; Media Center PC 6.0; .NET4.0C; .NET4.0E; aff-kingsoft-ciba; Zune 4.7) Steps to reproduce: 1.Open the camera application. 2.Switch to the front camera. Actual results: The front camera preview image rotated 180 degree. I found a similar bug. Bug number is 852836. But the B2G version we used is v1.1.0hd. The bug was already fixed in the code. Expected results: The front camera preview image display correctly.
Assignee: nobody → dwilson
Attached patch HWC patch for m-c (obsolete) — Splinter Review
Attached patch HWC patch for b2g18 (obsolete) — Splinter Review
Attachment #788311 - Attachment description: HWC m-c patch → HWC patch for m-c
Attachment #788311 - Flags: review?(vliu)
Shouldn't this bug be blocking bug 894374?
Status: NEW → ASSIGNED
(In reply to Mike Habicher [:mikeh] from comment #3) > Shouldn't this bug be blocking bug 894374? I think it already is
I should point out the the patches attached only solve the rotated preview. The snapshots are still rotated as described in bug 902298. There will have to be a different patch for that problem.
(In reply to Diego Wilson [:diego] from comment #5) > > I should point out the the patches attached only solve the rotated preview. > The snapshots are still rotated as described in bug 902298. There will have > to be a different patch for that problem. Yeah, that looks like a combination of things: the camera is misinterpreting the orientation values it's receiving from the sensor API; and the camera has an incorrect/non-existant |ro.moz.cam.#.sensor_offset| value.
The discussion in bug 902298 seems to continue into bug 898395 (private). If that means you guys will take it from there, I'm all for it! :-)
Oh, I also forgot to mention that for Helix there's also a libhwcomposer.so patch which will be released through CAF. This libhwcomposer.so issue only affects Helix and will not have any effect on other v1.1 devices.
Attachment #788311 - Flags: review?(ncameron)
Comment on attachment 788311 [details] [diff] [review] HWC patch for m-c Review of attachment 788311 [details] [diff] [review]: ----------------------------------------------------------------- r=me with nits fixed ::: widget/gonk/HwcComposer2D.cpp @@ +326,5 @@ > + //Rotation (in square angles only) via the HWC_TRANSFORM_ROT_* flags > + //Reflection (horizontal and vertical) via the HWC_TRANSFORM_FLIP_* flags > + // > + //A 2D transform with PreservesAxisAlignedRectangles() has all the attributes > + //above nit: space after // - e.g., should be '// HWC supports...' @@ +365,5 @@ > return false; > } > } > + //Buffer rotation is not to be confused with the angled rotation done by a transform matrix > + //It's a fancy ThebesLayer feature mainly used for list scrolling same nit please remove 'mainly' and 'list'
Attachment #788311 - Flags: review?(ncameron) → review+
Comment on attachment 788311 [details] [diff] [review] HWC patch for m-c Sorry to response lately. I think the patch is ok to me.
Attachment #788311 - Flags: review?(vliu) → review+
marco, can you follow up here with HD uplift?
Flags: needinfo?(mchen)
(In reply to Diego Wilson [:diego] from comment #5) > I should point out the the patches attached only solve the rotated preview. > The snapshots are still rotated as described in bug 902298. There will have > to be a different patch for that problem. Does that need to be taken by OEM through an AU update as well?
Flags: needinfo?(dwilson)
Address nits from ncameron. Carry over r+
Attachment #790390 - Flags: review+
Attachment #790390 - Attachment is obsolete: true
Attachment #790390 - Attachment is obsolete: false
Attachment #788311 - Attachment is obsolete: true
Addressed nits from ncameron. Carry over r+
Attachment #788312 - Attachment is obsolete: true
Attachment #790391 - Flags: review+
(In reply to Wayne Chang [:wchang] from comment #12) > (In reply to Diego Wilson [:diego] from comment #5) > > I should point out the the patches attached only solve the rotated preview. > > The snapshots are still rotated as described in bug 902298. There will have > > to be a different patch for that problem. > > Does that need to be taken by OEM through an AU update as well? Yes, there will be a gonk update in the vendor build.
Flags: needinfo?(dwilson)
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
https://hg.mozilla.org/releases/mozilla-b2g18_v1_1_0_hd/rev/7cdbb45400ed BTW, having spurious POVB's on the whiteboard is a good way to make sure that uplifts get missed...
(In reply to Ryan VanderMeulen [:RyanVM UTC-4] from comment #18) > https://hg.mozilla.org/releases/mozilla-b2g18_v1_1_0_hd/rev/7cdbb45400ed > > BTW, having spurious POVB's on the whiteboard is a good way to make sure > that uplifts get missed... Sorry about that Ryan. I missed it when I cloned the bug. Thanks for the uplift!
Flags: needinfo?(mchen)
[2013/10/21 Helix Testing] Gaia: c829a2042594b6c3a4899ee27979799a0f301534 Gecko: http://hg.mozilla.org/releases/mozilla-b2g18_v1_1_0_hd/rev/f7c657f6d019 BuildID 20131015042201 Version 18.0
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: