Bug 903562 - Honor horizontal and vertical reflection. r=ncameron, r=vliu